Dyntopo Smooth Shading Bug #109191

Closed
opened 2023-06-21 07:03:44 +02:00 by Shady Hamza · 4 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98

Blender Version
Broken: version: 3.4 and later
Worked: 3.3

Short description of error
Activating Smooth shading box from Dyntopo menu doesn't work unless you switch from sculpt mode to object mode then to sculpt mode again

Exact steps for others to reproduce the error

  • Add cube
  • Switch to sculpt mode
  • Enable smooth shading in Dyntopo panel
  • Enable Dyntopo (faces are still flat shaded)
  • Switch to object mode and then back to sculpt mode
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98 **Blender Version** Broken: version: 3.4 and later Worked: 3.3 **Short description of error** Activating Smooth shading box from Dyntopo menu doesn't work unless you switch from sculpt mode to object mode then to sculpt mode again **Exact steps for others to reproduce the error** - Add cube - Switch to sculpt mode - Enable smooth shading in Dyntopo panel - Enable Dyntopo (faces are still flat shaded) - Switch to object mode and then back to sculpt mode
Shady Hamza added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-21 07:03:45 +02:00
Member

Hi, thanks for the report. I can confirm.
Prior to 3.4, sculpt normals were updating after normal viewport update (zoom/orbit)
Raising the priority since this is a regression.

Hi, thanks for the report. I can confirm. Prior to 3.4, sculpt normals were updating after normal viewport update (zoom/orbit) Raising the priority since this is a regression.
Member

I suspect this is caused by 65900d88a8

I suspect this is caused by 65900d88a8317c207885ae4a3993272112114f36
Member

This is actually not supposed to work at all. Dyntopo now respects face smoothing settings.

@JulienKaspar
We could add a "Smooth Shade All" button that would set all faces to smooth. Maybe a "Flat Shade All" button too. Internally I would just add sculpt support to the existing smooth/flat shade all operators.

I could also add back the concept of a smooth shading override. I actually kind of think a flat shading override would be more useful. It's not really useful to view flat faces you want to be flat in smoothing shading, but it is useful to view smooth faces in flat shading. At least it seems that way to me.

This is actually not supposed to work at all. Dyntopo now respects face smoothing settings. @JulienKaspar We could add a "Smooth Shade All" button that would set all faces to smooth. Maybe a "Flat Shade All" button too. Internally I would just add sculpt support to the existing smooth/flat shade all operators. I could also add back the concept of a smooth shading override. I actually kind of think a _flat_ shading override would be more useful. It's not really useful to view flat faces you _want_ to be flat in smoothing shading, but it _is_ useful to view smooth faces in flat shading. At least it seems that way to me.
Member

I can confirm that the toggle is currently overriding the smooth/flat shading of the object, but only when switching to object mode.
That seems like a bug.

The intention is to get rid of the toggle all together.
If the object should be smooth/flat shaded, use the context menu in object mode.

@JosephEagar I agree that there could be a need for a toggle to override the smooth/flat shading while in sculpt mode. But if this get's added it shouldn't be specifically for Dyntopo.
That should be a setting in the "Options" panel among the "Display" toggles.

I can confirm that the toggle is currently overriding the smooth/flat shading of the object, but only when switching to object mode. That seems like a bug. The intention is to get rid of the toggle all together. If the object should be smooth/flat shaded, use the context menu in object mode. @JosephEagar I agree that there could be a need for a toggle to override the smooth/flat shading while in sculpt mode. But if this get's added it shouldn't be specifically for Dyntopo. That should be a setting in the "Options" panel among the "Display" toggles.
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-07-04 09:33:21 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-28 13:44:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109191
No description provided.